@startuml
interface DurationTrackPort {
   + void saveSolvingTime(DurationTrackSaveEntry durationTrackSaveEntry)
   + long loadSolvingTime(String sudokuId)
}

class DurationTrackAdapter {
    + void saveSolvingTime(DurationTrackSaveEntry durationTrackSaveEntry)
    + long loadSolvingTime(String sudokuId)
}

class DurationTrackService {
    + void setStartTime()
    + void setEndTime(String sudokuID)
    + void saveDuration(String sudokuID)
	+ DurationTrackSaveEntry getDurationTrackSaveEntry()
}

DurationTrackAdapter --|> DurationTrackPort
DurationTrackService --> DurationTrackPort
@enduml
